<resources>
    <string name="app_name">Format Player</string>
    <string name="sign_in">Вход</string>
    <string name="login">Логин</string>
    <string name="password">Пароль</string>
    <string name="not_registered">Не зарегистрирован?</string>
    <string name="back">Назад</string>
    <string name="send">Отправить</string>
    <string name="fio">Ф.И.О.</string>
    <string name="phone_number">Номер телефона</string>
    <string name="no_iptv">У Вас не подключена услуга IPTV</string>
    <string name="invalid_password">Неверный лицевой счет или пароль</string>
    <string name="invalid_number">Неверный номер телефона или имя</string>
    <string name="number_already_exits">Учетная запись с таким номером телефона уже существует. Обратитесь в техническую поддержку для восстановления пароля</string>
    <string name="app_in_test">Приложение работает в тестовом режиме.
    Ваша заявка на регистрацию принята.
    С Вами свяжется оператор.
    Спасибо за обращение!</string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="favourite">Избранное</string>
    <string name="profile">Профиль</string>
    <string name="format_player">ФОРМАТ PLAYER</string>
    <string name="channels">Телеканалы</string>
    <string name="cinema">Кинозал</string>
    <string name="mariupol_online">Мариуполь Online</string>
    <string name="cameras">Камеры</string>
    <string name="all_list">Весь список</string>
    <string name="all">Все</string>
    <string name="format">ФОРМАТ</string>
    <string name="player">PLAYER</string>
    <string name="last">Последние</string>
    <string name="quality">Качество • </string>
    <string name="auto">Авто</string>
    <string name="full_hd">Full HD 1080p</string>
    <string name="hd">HD 720p</string>
    <string name="sd">SD</string>
    <string name="mid">Mid</string>
    <string name="low">Low</string>
    <string name="personal_account">Личный кабинет</string>
    <string name="payments">История платежей</string>
    <string name="updating">Обновление...</string>
    <string name="personal_login">Лицевой счёт</string>
    <string name="tariff">Тариф</string>
    <string name="balance">Баланс</string>
    <string name="bonus_balance">Бонусный счёт</string>
    <string name="period_end">Действителен до</string>
    <string name="state">Состояние</string>
    <string name="address">Адрес</string>
    <string name="email">Email</string>
    <string name="current_state">По состоянию на</string>
    <string name="active">Активный</string>
    <string name="not_active">Не активный</string>
    <string name="payment_in">Пополнение</string>
    <string name="payment_out">Списание</string>
    <string name="time">Время</string>
    <string name="amount">Сумма</string>
    <string name="note">Примечание</string>
    <string name="favourite_empty">К сожалению список избранных пустой...</string>
    <string name="mariupol_family">Mariupol Family</string>
    <string name="gifts">Подарки</string>
    <string name="purchased_gifts">История покупок</string>
    <string name="auctions">Аукционы</string>
    <string name="bitAuctions">История аукционов</string>
    <string name="cost">Стоимость</string>
    <string name="count">Количество</string>
    <string name="start_price">Начальная цена</string>
    <string name="auction_time_end">Аукцион доступен до</string>
    <string name="more">Подробнее</string>
    <string name="price">Цена</string>
    <string name="code">Код</string>
    <string name="issue_info">Информация о выдаче</string>
    <string name="bit">Ставка</string>
    <string name="status">Статус</string>
    <string name="status_0">Аукцион не закончен, ставка перебита</string>
    <string name="status_1">Аукцион закончен, ставка перебита</string>
    <string name="status_2">Аукцион не закончен, ставка не перебита</string>
    <string name="status_3">Аукцион закончен, ставка не перебита</string>
</resources>